## 
##  Created on: Apr 03, 2012
##      Author: martinez
## 

CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

PROJECT(SS12_GL C CXX)

SET(CMAKE_MODULE_PATH ${CMAKE_HOME_DIRECTORY}/cmake)

IF(WIN32)
  #Windows extra-wurst
  
  SET(BITNESS 32)
  IF(CMAKE_SIZEOF_VOID_P EQUAL 8)
    SET(BITNESS 64)
  ENDIF()
  
  SET(GLUT_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/win32/freeglut/include)
  SET(GLEW_INCLUDE_DIR ${CMAKE_HOME_DIRECTORY}/win32/glew/include)
  
  IF(BITNESS EQUAL 64)
    SET(GLUT_LIBRARIES ${CMAKE_HOME_DIRECTORY}/win32/freeglut/Release_x64/freeglut_static.lib)
    SET(GLEW_LIBRARIES ${CMAKE_HOME_DIRECTORY}/win32/glew/Release_x64/glew32s.lib)
  ELSE()
    SET(GLUT_LIBRARIES ${CMAKE_HOME_DIRECTORY}/win32/freeglut/Release_x86/freeglut_static.lib)
    SET(GLEW_LIBRARIES ${CMAKE_HOME_DIRECTORY}/win32/glew/Release_x86/glew32s.lib)
  ENDIF()
  
  SET(GLUT_FOUND 1)
  SET(GLEW_FOUND 1)
  
  ADD_DEFINITIONS(-DNOMINMAX)
  ADD_DEFINITIONS(-DWIN32_LEAN_AND_MEAN) 
  ADD_DEFINITIONS(-DFREEGLUT_STATIC)
  ADD_DEFINITIONS(-DGLEW_STATIC)
  
  SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /LTCG /NODEFAULTLIB:libcmt")
ELSE()
  #Everyone else should be happy with this
  FIND_PACKAGE(GLUT REQUIRED)
ENDIF()

FIND_PACKAGE(OpenGL REQUIRED)
FIND_PACKAGE(GLEW REQUIRED)

ADD_SUBDIRECTORY(src)

# :mode=cmake:
